# solid-vite-rust

./: Cargo.toml
src/: main.rs
web/: package-lock.json  package.json
