[package]
name = "solid-vite-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.20", features = ["macros"] }
tokio = { version = "1.30.0", features = ["full"] }
